# Compass

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  host-release.yml  website.yml
scripts/: generate-icons.mjs  generate-installer-images.ps1  publish-macos-assets.ps1  publish-release.ps1
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_column_profiles.sql  003_goals.sql  004_balance.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  budgets.rs  categories.rs  import.rs  mod.rs  transactions.rs
src/components/: AccountDetailModal.tsx  CategorizationRulesModal.tsx  CategoryModal.tsx  CategoryOptions.tsx  EditTransactionModal.tsx  ErrorBoundary.tsx  GoldParticleField.tsx  InfoTooltip.tsx  InsightCard.tsx  InsightCarousel.tsx  LoanUploaderModal.tsx  ManageAccountsPanel.tsx  OnboardingChecklistWidget.tsx  PinModal.tsx  ProfileSwitcher.tsx  Skeleton.tsx  Spotlight.tsx  SpotlightCard.tsx  TransactionDetailModal.tsx  UpdateChecker.tsx  WeeklyMiniBar.tsx
src/hooks/: useAutoMonth.ts  useModalDismiss.ts
src/lib/: agent.ts  benchmarks.ts  db.ts  demoData.ts  netWorth.ts  onboardingSteps.ts  pdfParse.ts  pendingImport.ts  types.ts  utils.ts
src/pages/: AgentPage.tsx  BudgetsPage.tsx  DashboardPage.tsx  (+7 more)
website/: .gitignore  index.html  nginx.conf
(+6 files in other folders)
